--- a/controller/src/main/resources/base/layout/ability_main.xml
+++ b/controller/src/main/resources/base/layout/ability_main.xml
@@ -1,18 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<DirectionalLayout
+<StackLayout
     xmlns:ohos="http://schemas.huawei.com/res/ohos"
+    ohos:id="$+id:stacklayout"
     ohos:height="match_parent"
     ohos:width="match_parent"
-    ohos:orientation="vertical">
-
-    <Text
-        ohos:id="$+id:text_helloworld"
-        ohos:height="match_content"
-        ohos:width="match_content"
-        ohos:background_element="$graphic:background_ability_main"
-        ohos:layout_alignment="horizontal_center"
-        ohos:text="$string:HelloWorld"
-        ohos:text_size="50"
-        />
-
-</DirectionalLayout>
+    ohos:background_element="$graphic:background_ability_main" />
